# rune_discord_plugin

./: .gitignore  .gitmodules  CMakeLists.txt  plugin.json
.github/workflows/: github-release.yml
cmake/: FindOpenSSL.cmake
include/: bot_manager.h  discord_plugin.h
patches/: dpp_static_openssl.patch
src/: bot_manager.cpp  discord_plugin.cpp
src/nodes/actions/: connect_discord.cpp  reply_to_message.cpp  send_direct_message.cpp  send_embed.cpp  send_message.cpp  set_presence.cpp
src/nodes/data/: build_embed.cpp  get_channel.cpp  get_user.cpp
src/nodes/events/: on_message.cpp  on_reaction.cpp  on_ready.cpp
